[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/BattleDisplay.gd" type="Script" id=2]
[ext_resource path="res://scenes/ImagePanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GestureInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/TronCharacter.tscn" type="PackedScene" id=9]

[node name="BattleDisplay" type="Spatial"]
transform = Transform( -1, -3.82137e-15, -8.74228e-08, -8.74228e-08, 4.37114e-08, 1, 0, 1, -4.37114e-08, 0, 2.32348, -4.079 )
script = ExtResource( 2 )

[node name="HealthBarRight" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.866025, 0.5, -3.35681e-08, -0.5, 0.866025, -3.78552e-08, 1.01433e-08, 4.95676e-08, 1, -2, 0, 0 )

[node name="EnergyBarRight" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.866025, 0.5, -3.35681e-08, -0.5, 0.866025, -3.78552e-08, 1.01433e-08, 4.95676e-08, 1, -2, 0, -0.2 )
is_energy = true

[node name="HealthBarLeft" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.866025, -0.5, 1.09278e-07, -0.5, 0.866025, -8.15666e-08, -5.38547e-08, -1.25278e-07, -1, 2, 0, 0 )

[node name="EnergyBarLeft" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.866025, -0.5, 1.09278e-07, -0.5, 0.866025, -8.15666e-08, -5.38547e-08, -1.25278e-07, -1, 2, 0, -0.2 )
is_energy = true

[node name="PlayerLeft" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.606218, -8.75459e-08, -0.35, -0.35, -1.5299e-08, -0.606218, 6.81675e-08, 0.7, -5.70222e-08, 1.93605, 0, -2.37609 )

[node name="PlayerRight" parent="." instance=ExtResource( 9 )]
transform = Transform( -0.457976, -3.97828e-09, 0.529394, 0.529394, 3.99681e-08, 0.457976, -3.28298e-08, 0.7, -2.31405e-08, -2.09511, -3.50949, -2.37609 )

[node name="EnemyPanel" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.344645, 0.203027, -6.03983e-08, 0.203027, 0.344645, 1.77492e-08, 6.10488e-08, -1.53634e-08, -0.4, -2.49696, 0.316873, 0.536654 )

[node name="GestureInterface" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, -2.2215e-28, 8.47033e-22, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[connection signal="attack_complete" from="PlayerLeft" to="." method="_on_Attack_complete" binds= [ "left" ]]
[connection signal="charge_complete" from="PlayerLeft" to="." method="_on_Attack_charge_complete" binds= [ "left" ]]
[connection signal="attack_complete" from="PlayerRight" to="." method="_on_Attack_complete" binds= [ "right" ]]
[connection signal="charge_complete" from="PlayerRight" to="." method="_on_Attack_charge_complete" binds= [ "right" ]]
[connection signal="attack" from="GestureInterface" to="." method="_on_Attack_activated"]
[connection signal="defense" from="GestureInterface" to="." method="_on_Defense_activated"]
